// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch component renders a Switch in "on" state 1`] = `
.sxnodlz {
  -webkit-appearance: none;
  appearance: none;
  background-color: var(--sx-colors-tonal200);
  border: none;
  border-radius: var(--sx-radii-round);
  cursor: pointer;
  display: flex;
  overflow: hidden;
  padding: var(--sx-space-0);
  position: relative;
  transition: all 50ms ease-out;
  width: var(--sx-sizes-4);
}

.sxnodlz:hover {
  background-color: var(--sx-colors-tonal300);
}

.sxnodlz:focus {
  outline: 2px solid var(--sx-colors-primary);
  outline-offset: 1px;
}

.sxnodlz[data-state="checked"] {
  background-color: var(--sx-colors-primary);
}

.sxnodlz[data-state="checked"]:hover {
  background-color: var(--sx-colors-primaryMid);
}

.sx6yqld {
  background-color: white;
  border-radius: var(--sx-radii-round);
  display: block;
  height: var(--sx-sizes-1);
  width: var(--sx-sizes-1);
  transition: transform 75ms;
  will-change: transform;
}

.sx6yqld[data-state="checked"] {
  transform: translateX(calc(var(--sx-sizes-2) - var(--sx-space-1)));
}

<div>
  <input
    checked=""
    hidden=""
    type="checkbox"
    value="on"
  />
  <button
    aria-checked="true"
    class="sxnodlz"
    data-state="checked"
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="sx6yqld"
      data-state="checked"
    />
  </button>
</div>
`;

exports[`Switch component renders a disabled switch 1`] = `
.sxnodlz {
  -webkit-appearance: none;
  appearance: none;
  background-color: var(--sx-colors-tonal200);
  border: none;
  border-radius: var(--sx-radii-round);
  cursor: pointer;
  display: flex;
  overflow: hidden;
  padding: var(--sx-space-0);
  position: relative;
  transition: all 50ms ease-out;
  width: var(--sx-sizes-4);
}

.sxnodlz:hover {
  background-color: var(--sx-colors-tonal300);
}

.sxnodlz:focus {
  outline: 2px solid var(--sx-colors-primary);
  outline-offset: 1px;
}

.sxnodlz[data-state="checked"] {
  background-color: var(--sx-colors-primary);
}

.sxnodlz[data-state="checked"]:hover {
  background-color: var(--sx-colors-primaryMid);
}

.sx6yqld {
  background-color: white;
  border-radius: var(--sx-radii-round);
  display: block;
  height: var(--sx-sizes-1);
  width: var(--sx-sizes-1);
  transition: transform 75ms;
  will-change: transform;
}

.sx6yqld[data-state="checked"] {
  transform: translateX(calc(var(--sx-sizes-2) - var(--sx-space-1)));
}

<div>
  <input
    disabled=""
    hidden=""
    type="checkbox"
    value="on"
  />
  <button
    aria-checked="false"
    class="sxnodlz"
    data-disabled=""
    data-state="unchecked"
    disabled=""
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="sx6yqld"
      data-disabled=""
      data-state="unchecked"
    />
  </button>
</div>
`;

exports[`Switch component renders a switch 1`] = `
.sxnodlz {
  -webkit-appearance: none;
  appearance: none;
  background-color: var(--sx-colors-tonal200);
  border: none;
  border-radius: var(--sx-radii-round);
  cursor: pointer;
  display: flex;
  overflow: hidden;
  padding: var(--sx-space-0);
  position: relative;
  transition: all 50ms ease-out;
  width: var(--sx-sizes-4);
}

.sxnodlz:hover {
  background-color: var(--sx-colors-tonal300);
}

.sxnodlz:focus {
  outline: 2px solid var(--sx-colors-primary);
  outline-offset: 1px;
}

.sxnodlz[data-state="checked"] {
  background-color: var(--sx-colors-primary);
}

.sxnodlz[data-state="checked"]:hover {
  background-color: var(--sx-colors-primaryMid);
}

.sx6yqld {
  background-color: white;
  border-radius: var(--sx-radii-round);
  display: block;
  height: var(--sx-sizes-1);
  width: var(--sx-sizes-1);
  transition: transform 75ms;
  will-change: transform;
}

.sx6yqld[data-state="checked"] {
  transform: translateX(calc(var(--sx-sizes-2) - var(--sx-space-1)));
}

<div>
  <input
    hidden=""
    type="checkbox"
    value="on"
  />
  <button
    aria-checked="false"
    class="sxnodlz"
    data-state="unchecked"
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="sx6yqld"
      data-state="unchecked"
    />
  </button>
</div>
`;
